# gh-agent

./: .env.example  .gitignore  README.md  agent_loop.py  base_client.py  github_tools.py  main.py  pyproject.toml  requirements.txt  server.py
docs/: README.md
github/: __init__.py  actions.py  client.py  files.py  issues.py  pulls.py  releases.py  repos.py  search.py
tests/: conftest.py  test_actions.py  test_client.py  test_files.py  test_issues.py  test_pulls.py  test_releases.py  test_repos.py  test_search.py
