[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gh-mcp"
version = "0.2.0"
description = "Full GitHub control as an MCP server"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.7.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
gh-mcp = "server:mcp.run"

[tool.hatch.build.targets.wheel]
packages = ["github"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
